# tree-sitter-modulemap

./: Cargo.toml  README.md  binding.gyp  grammar.js  package-lock.json  package.json  tree-sitter.json
bindings/node/: binding.cc  index.d.ts  index.js
bindings/rust/: build.rs  lib.rs
src/: grammar.json  node-types.json  parser.c
test/corpus/: simple.txt
